# note

./: readme.md
api/: .gitignore  Cargo.toml  app.db
api/src/: main.rs  note.rs  structs.rs  token.rs
api/src/note/: mod.rs  note.rs  status.rs  tag.rs
api/src/token/: mod.rs
page/: package-lock.json  package.json
page/components/: board.tsx  icon.tsx  note.tsx  table.tsx
page/components/scss/: board.module.scss  note.module.scss  table.module.scss
page/lib/: main.ts  token.ts
page/lib/types/: type.ts
page/pages/: index.tsx  login.tsx
page/pages/scss/: index.module.scss
page/styles/: global.css
